fix animeserie functions and add new proto files
